@@ -1,4 +1,4 @@
-Changelog started November 2006; Currently at version 0.9.1
+Changelog started November 2006; Currently at version 0.9.2
 
 Legend:
 --------------------------------------------------------------------------------
@@ -9,6 +9,11 @@ Legend:
  - Feature or option removal.
  % Development flag or note, such as branching.
 
+
+Pretty URLs 0.9.2                                                 25 March, 2009
+================================================================================
+ ! Base: Minor typos in the previous change to fix_possible_url(). (News.php)
+ + Base: Prettify URLs in emails. (PrettyUrls-Filters.php, Subs-Post.php)
 
 Pretty URLs 0.9.1                                              24 February, 2009
 ================================================================================
